packages/fxa-content-server/app/styles/modules/_password-row.scss
/**
 * There are some dependencies for passwords in the _input-row partial
 */

.password-row {
  position: relative;

  &.input-row .password {

    html[dir='ltr'] & {
      padding-right: 75px;
    }

    html[dir='rtl'] & {
      padding-left: 75px;
    }
  }

  .input-help {

    html[dir='ltr'] & {
      text-align: left;

      &.input-help-focused {
        text-align: center;

        &.input-help-balloon {
          left: 360px;
          text-align: left;
        }

        &.input-help-balloon::before {
          @include respond-to('balloonBig') {
            right: 100%;
          }
        }
      }
    }

    html[dir='rtl'] & {
      text-align: right;

      &.input-help-focused {
        text-align: center;

        &.input-help-balloon {
          right: 360px;
          text-align: right;
        }

        &.input-help-balloon::after,
        &.input-help-balloon::before {
          @include respond-to('balloonSmall') {
            right: 15px;
          }
          @include respond-to('balloonBig') {
            left: 100%;
          }
        }
      }

    }

    @include respond-to('balloonBig') {
      &.input-help-small-only {
        display: none;
      }
    }

    @include respond-to('balloonSmall') {
      &.input-help-big-only {
        display: none;
      }
    }
  }

  .input-help-signup {
    text-align: center;
  }

  .show-password {
    opacity: 0;
    position: absolute;
    width: 1px;
  }

  /**
   * The addition of right, top, border-radius, and background-color are
   * all to fix a bug in firefox 29 where the right padding of the password
   * field is ignored and password text flows under the show/hide button. When
   * Firefox is fixed, top and right can be set to 0, height set to 44px,
   * border-radius and background-color removed.
   *
   * See https://bugzilla.mozilla.org/show_bug.cgi?id=965237
   */

  .show-password-label {
    background-color: $input-background-color-default;
    background-image: image-url('icon-show-password.svg');
    background-position: center;
    background-repeat: no-repeat;
    border: 0;
    cursor: pointer;
    height: $input-height - 2px;
    position: absolute;
    text-indent: -9999px;
    top: 1px;
    width: 55px;
    z-index: 3;

    html[dir='ltr'] & {
      border-radius: 0 $input-border-radius $input-border-radius 0;
      right: 1px;
    }

    html[dir='rtl'] & {
      border-radius: $input-border-radius 0 0 $input-border-radius;
      left: 1px;
    }
  }

  .password:focus ~ .show-password-label {
    border-color: $input-border-color-focus;
  }

  .password.empty ~ .show-password,
  .password.empty ~ .show-password-label {
    display: none;
  }

  .input-help-balloon {
    background: $color-white;
    border: 1px solid $marketing-border-color;
    border-radius: $small-border-radius;
    box-shadow: 0 2px 8px rgba($grey-90, .1);
    color: $faint-text-color !important; // override default tip styles
    padding: 15px;
    position: absolute;
    text-align: left;
    top: -22px;
    width: 250px;
    z-index: 6; // one more than the tooltip

    span {
      color: $grey-90;
      display: block;
    }
  }

  .input-help-balloon::before {
    background-color: #fff;
    border: solid #d7d7db;
    content: '.';
    height: 16px;
    pointer-events: none;
    position: absolute;
    text-indent: -999px;
    transform: rotate(45deg);
    white-space: nowrap;
    width: 16px;
    // The z-index must be -1 or else the caret is displayed on top of the tooltip text
    z-index: -1;

    @include respond-to('balloonSmall') {
      border-width: 1px 0 0 1px;
      left: 23px;
      top: -8px;
    }

    @include respond-to('balloonBig') {
      border-width: 0 0 1px 1px;
      left: -9px;
      top: 20px;
    }
  }


  .password-strength-balloon {
    font-size: 14px;
    font-weight: 400;
    line-height: 1.3;
    opacity: 1;
    padding: 28px 14px;
    z-index: 5;

    @include respond-to('balloonSmall') {
      left: -3px;
      margin-top: 0;
      padding: 13px 14px;
      top: 43px;
      width: calc(100% + 6px);
    }

    @include respond-to('balloonBig') {
      left: 360px;
      top: -22px;
      width: 272px;
    }

    a {
      color: $grey-50;
      text-decoration: underline;
    }

    h3 {
      color: $grey-90;
      font-size: 14px;
      font-weight: 400;
      margin-inline-start: 26px;
      margin-top: 0;
    }

    ul {
      list-style-type: none;
      margin: 0;
      padding: 0;
    }

    li {
      margin: 0 0 7px 0;
      padding-inline-start: 26px;

      &:last-of-type {
        margin-bottom: 0;
      }

      &::before {
        // So that we can control the position of the bullet, use a unicode bullet.
        background-position: 50% 50%;
        background-repeat: no-repeat;
        content: '\002022';
        display: inline-block;
        margin-inline-end: 10px;
        margin-inline-start: -26px;
        text-indent: 5px;
        width: 16px;
      }

      &.met::before {
        background-image: url('/images/icon-check-blue-50.svg');
        text-indent: -9999px;
      }

      &.fail::before {
        background-image: url('/images/icon-warning-red-50.svg');
        text-indent: -9999px;
      }

      &.lock::before {
        background-image: url('/images/icon-lock-grey-50.svg');
        text-indent: -9999px;
      }
    }

    .big-only {
      @include respond-to('balloonSmall') {
        display: none;
      }
    }
  }
}

/**
 * IE8 blows up when changing the type of the password field
 * to a text field. Hide the show/hide button and reset
 * the password field's padding.
 */
.reveal-pw {
  .password-row input[type='password'] {
    padding-right: $input-left-right-padding;
  }

  .show-password,
  .show-password-label {
    display: none;
  }
}

.show-password-label:hover,
.show-password-label:active,
.show-password-label:focus {
  background-color: #d9d9d9;
}

input[type='text'] {
  // Hover over the show password label in its dark state
  ~ .show-password-label,
  ~ .show-password-label:focus,
  ~ .show-password-label:active,
  ~ .show-password-label:hover {
    background-color: #bdbdbe;
  }
}

